--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // 스프링 시큐리트 모듈 테스트
+    testImplementation 'org.springframework.security:spring-security-test'
+
 
     // 스프링 시큐리티
     implementation 'org.springframework.boot:spring-boot-starter-security'
